--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://PRIII:Wilson6969@cluster0.hugpy.mongodb.net/PRIII?retryWrites=true&w=majority
+MONGO_URL = 'mongodb+srv://ecommerce:3JUOQTzjfNkDKtnh@cluster0.sl41s.mongodb.net/ecommerce?retryWrites=true&w=majority'
