--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon server.js"
   },
@@ -14,8 +15,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "log4js": "^6.3.0",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
+    "pino": "^7.3.0",
+    "pino-pretty": "^7.2.0",
     "socket.io": "^4.2.0"
   }
 }
