--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "set NODE_ENV=dev&& nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "log4js": "^6.3.0",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "pino": "^7.3.0",
     "pino-pretty": "^7.2.0",
     "socket.io": "^4.2.0"
