--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "joi": "^17.6.0",
     "log4js": "^6.3.0",
+    "mongodb": "^4.3.1",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
