--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.4.2",
     "mongodb": "^4.3.1",
     "mongoose": "^6.0.5",
