--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "set NODE_ENV=development&& node server.js"
+    "start": "set NODE_ENV=development&& nodemon server.js"
   },
   "keywords": [],
   "author": "",
