--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "set NODE_ENV=development&& node server.js"
+    "start": "set NODE_ENV=development&& pm2-runtime start server.js"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +34,12 @@
     "path": "^0.12.7",
     "pino": "^7.3.0",
     "pino-pretty": "^7.2.0",
+    "pm2": "^5.2.0",
     "socket.io": "^4.2.0"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0",
+    "pm2": ">=5.0.0"
   }
 }
