--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "path": "^0.12.7",
     "pino": "^7.3.0",
     "pino-pretty": "^7.2.0",
-    "pm2": "^5.2.0",
-    "socket.io": "^4.2.0"
+    "pm2": "^2.10.4",
+    "socket.io": "^4.2.0",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": ">=14.0.0",
