--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "set NODE_ENV=development&& pm2-runtime start server.js",
+    "start": "set NODE_ENV=development&& node server.js",
+    
     "dev": "set NODE_ENV=development&& nodemon start server.js"
   },
   "keywords": [],
