--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "set NODE_ENV=development&& node server.js",
+    "start": "set NODE_ENV=development&& pm2-runtime start server.js",
     "dev": "set NODE_ENV=development&& nodemon start server.js"
   },
   "keywords": [],
@@ -35,6 +35,7 @@
     "path": "^0.12.7",
     "pino": "^7.3.0",
     "pino-pretty": "^7.2.0",
+    "pm2": "^5.2.0",
     "socket.io": "^4.2.0",
     "uuid": "^8.3.2"
   },
