--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
     "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pino": "^7.3.0",
     "pino-pretty": "^7.2.0",
     "pm2": "^5.2.0",
     "socket.io": "^4.2.0",
+    "socketio-jwt-auth": "^0.2.1",
     "uuid": "^8.3.2"
   },
   "engines": {
