--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "pm2": "^5.2.0",
     "socket.io": "^4.2.0",
     "socketio-jwt-auth": "^0.2.1",
-    "uuid": "^8.3.2",
-    "nodemon": "^2.0.12"
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": ">=14.0.0",
