--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "uuid": "^8.3.2"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0",
-    "pm2": ">=5.0.0"
+    "node": "18.x",
+    "npm": ">=6.0.0"
   }
 }
